Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59450

Device may return IP of the previous configuration instead of the new one

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9
    • 5.9.0 Beta 1
    • Device Creation
    • None

      1) Device has already been configured to use a particular subnet
      2) It is then plugged into a host computer again
      3) Host QDB configures a different subnet for it
      4) The device may still return its old address to the host, which means it can't be connected to

        For Gerrit Dashboard: QTBUG-59450
        # Subject Branch Project Status CR V

            kari.oikarinen Kari Oikarinen
            kari.oikarinen Kari Oikarinen
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes